# multi_audio_track_record

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
multi_audio_track_record/: audio.py  cli.py  config.py  scene.py
multi_audio_track_record/audio_input_device_manager/: __init__.py  _pyaudio.py  base.py
multi_audio_track_record/config_store_manager/: __init__.py  base.py  file.py
multi_audio_track_record/gui/: app_state.py  run_app.py
multi_audio_track_record/gui/controls/: audio_input_device_list_panel.py  record_control_panel.py  scene_selection_panel.py  track_list_panel.py
multi_audio_track_record/gui/views/: __init__.py  add_audio_input_device_dialog.py  add_audio_input_dialog.py  add_scene_dialog.py  add_track_dialog.py  home.py
multi_audio_track_record/subcommand/: list_device.py  record.py
