[tool.poetry]
name = "multi-audio-track-record"
version = "0.0.0"
description = ""
authors = ["aoirint <aoirint@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"


[tool.poetry.group.dev.dependencies]
pysen = "^0.11.0"
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
flake8-bugbear = "^24.2.6"
mypy = "^1.9.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
