[tool.pysen]
version = "0.11"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py311"

  [[tool.pysen.lint.mypy_targets]]
    paths = ["."]


[tool.poetry]
name = "multi-audio-track-record"
version = "0.0.0"
description = ""
authors = ["aoirint <aoirint@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pydantic = "^2.7.1"
pyaudio = "^0.2.14"
flet = "^0.22.1"
platformdirs = "^4.2.2"


[tool.poetry.group.dev.dependencies]
pysen = "^0.11.0"
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
flake8-bugbear = "^24.2.6"
mypy = "^1.9.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
